@@ -8,7 +8,7 @@ def read(fname):
 
 setup(
     name = "django_slumber",
-    version = "0.4.6.7",
+    version = "0.4.6.8",
     author = "Kirit Saelensminde",
     author_email = "kirit@felspar.com",
     url='https://github.com/KayEss/django-slumber',
