@@ -84,13 +84,8 @@ def get_slumber_services(directory = None):
         services = {}
         for k, v in directory.items():
             if v in settings.INSTALLED_APPS:
-                # This version maps the everything on the service name to
-                # the SLUMBER_SERVICE service
-                url = get_slumber_service_url()
-                # The below version properly sets the prefix
-                #url = urljoin(
-                    #urljoin(get_slumber_local_url_prefix(),
-                        #get_slumber_root()), '../%s' % k)
+                url = urljoin(
+                    get_slumber_service_url(), v.replace('.', '/') + '/')
                 services[k] = url
             else:
                 services[k] = v
